# blobapi

./: .gitignore  README.md  connections.toml.example  main.py  pyproject.toml
adapters/: classify_symbols.yaml  column_classify_and_discover.yaml  google.yaml  intent_to_constraints.yaml  llm_model_cost.yaml  llm_pricing.yaml  providers.yaml  weather.yaml
blobapi/: bbox_extract.py  bootstrap_pricing.py  browser_extract.py  config.py  duckdb_setup.py  embedding_catalog.py  git_scraper.py  http_adapter.py  intent_sieve.py  loader.py  model_id.py  models.py  pyside6_bbox_demo.py  rsc_extract.py  schema_fingerprint.py  scrape_pricing.py  scraper.py  unified_embeddings.py
docs/: adapter-guide.md  blob-extension-family.md  blobreader-design.md  jmespath-vs-sql.md  llm-setup.md  schema-driven-table-extraction.md
experiments/: http_adapter.py  intent_to_constraints.py  populate_companies.py  populate_geonames.py
specs/: open-meteo-archive.yaml
sql/: classify_and_bootstrap.sql  create_http_adapter.sql  create_llm_adapter.sql  create_llm_pricing.sql  domain_prefetch.sql  domain_schema_pg.sql  domain_writeback.sql  google_adapt.sql  http_adapt.sql  jmespath_sql_analysis.sql  llm_demo.sql  llm_model_cost.sql  load_http_adapters.sql  load_llm_adapters.sql  load_llm_pricing.sql  load_llm_pricing_from_bifrost.sql  merge_pricing_from_ttst.sql  scrape_pricing.sql  scrape_pricing_init.sql  wikidata_domain_fetch.sql
tools/: google_token_refresh.py  populate_companies.py  populate_geonames.py
